--- a/index.html
+++ b/index.html
@@ -13,9 +13,31 @@
 </head>
 
 <body>
-  <h1>start here</h1>
-  <h2>hello</h2>
-  <h2>hello</h2>
+  <div class="card">
+    <div class="card-header animated-bg" id="header">
+      <img src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80" alt="headerImage">
+      
+    </div>
+    <div class="card-content">
+      <h3 class="card-title animated-bg animated-bg-text" id="title">
+        Some Card Title Here
+      </h3>
+      <p class="card-desc" id="desc">
+        <span class="animated-bg animated-bg-text">&nbsp;</span>
+        <span class="animated-bg animated-bg-text">&nbsp;</span>
+        <span class="animated-bg animated-bg-text">&nbsp;</span>
+      </p>
+    </div>
+    <div class="author">
+      <div class="profile-img animated-bg" id="profile-img">
+        <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="" />
+      </div>
+      <div class="author-info">
+        <strong class="animated-bg animated-bg-text" id="name">&nbsp;</strong>
+        <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+      </div>
+    </div>
+  </div>
 
 
   <script src="script.js"></script>
