basic card layout done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         Some Card Title Here
       </h3>
       <p class="card-desc" id="desc">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus laborum maiores mollitia fugit labore! Eos.
         <span class="animated-bg animated-bg-text">&nbsp;</span>
         <span class="animated-bg animated-bg-text">&nbsp;</span>
         <span class="animated-bg animated-bg-text">&nbsp;</span>
@@ -33,8 +34,8 @@
         <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="" />
       </div>
       <div class="author-info">
-        <strong class="animated-bg animated-bg-text" id="name">&nbsp;</strong>
-        <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+        <strong class="animated-bg animated-bg-text" id="name">Anand Shukla</strong>
+        <small class="animated-bg animated-bg-text" id="date">28 July 2021</small>
       </div>
     </div>
   </div>
